chap 6 Grace Revision

--- a/escritos-volumen-1/updated/07-capitulo-6.adoc
+++ b/escritos-volumen-1/updated/07-capitulo-6.adoc
@@ -1,25 +1,25 @@
-== Capítulo VI. Babilonia la Grande / La Ciudad de Confusión Donde el Anticristo Reina
+== Capítulo VI. Babilonia la Grande / La Ciudad de Confusión Donde Reina el Anticristo
 
 BABILONIA:
 La ciudad edificada y colmada de imágenes y semejanzas
-de los caminos y de las verdades de Dios,
-pero sin Su vida ni poder.
+de los caminos y verdades de Dios,
+pero sin Su vida ni Su poder.
 En su exterior tiene la semejanza de iglesia, la semejanza de ministerio,
 la semejanza de ordenanzas, deberes y caminos de santidad.
 En su interior tiene la semejanza de buen conocimiento,
 la semejanza de arrepentimiento y conversión, la semejanza de fe, celo, esperanza,
-inocencia, santificación, etc., pero la sustancia real, la verdad,
-la virtud de todas esas cosas está ausente y es hallada
+inocencia, santificación, etc., pero la sustancia real, la verdad y
+la virtud de todas esas cosas está ausente y se halla
 persiguiendo aquello que proclama ser.
 
 Esta es la mujer que ha hechizado a toda la tierra por muchas generaciones.
-Ella sigue cambiando sus vestidos y sus pinturas para poder seguir hechizando
-a la gente y sentarse como una reina gobernando sobre sus conciencias.
+Ella sigue cambiando sus vestidos y sus pinturas para seguir hechizando
+a la gente, y poder sentarse como una reina gobernando sobre sus conciencias.
 ¡Pero bendita sea la luz que se ha levantado para exponerla y bendito el poder
-que es capaz de derribar esta poderosa ciudad y todo lo que toma parte de ella!
+que es capaz de derribar esta poderosa ciudad y todo lo que participa de ella!
 
-¡El Señor Dios Omnipotente reina en Sión, y el anticristo, con Babilonia su ciudad,
-cae! ¡Canten alabanzas, canten alabanzas, oh habitantes de Sión,
+¡El Señor Dios Omnipotente reina en Sión, y el anticristo cae, junto con Babilonia su ciudad,
+¡Canten alabanzas, canten alabanzas, oh habitantes de Sión,
 canten a Aquel que somete a Babilonia bajo sus pies junto con toda su gloria!
 
 === Prefacio
@@ -29,68 +29,69 @@ una ferviente búsqueda en las Escrituras (las cuales,
 mi alma disfrutaba profundamente y mi corazón honraba y amaba, y todavía lo hace),
 en pos de la revelación de la mente y voluntad de Dios.
 Dos cosas busqué y rogué solemnemente: Una era, descubrir la forma externa de adoración;
-la otra, descubrir la vida interna, virtud y poder,
+la otra, descubrir la vida, virtud y poder interior,
 pues yo consideraba lo externo como el medio apropiado para llevarme a lo interno.
 
 Al comienzo de los problemas en estas naciones,
-hubo una agitación viva en mí y una esperanza de que Dios estaba sacando a la luz algo.
+hubo una agitación viva en mí y una esperanza de que Dios estaba sacando algo a la luz.
 Sentí la misma agitación en muchos otros,
 por lo que mi corazón se regocijó y mi alma se llenó de vigor.
 Pero la expectativa que había encontrado pronto colapsó y se marchitó,
 y fui forzado a retirarme y a separarme de aquello
 donde la vida y el poder estaban muriendo y decayendo.
 El Señor estaba conmigo en mi separación, mi alma lo recuerda bien.
-Él tuvo en cuenta la sencillez, honestidad e integridad de mi corazón,
+Él tomó en cuenta la sencillez, honestidad e integridad de mi corazón,
 lo que Él mismo había encendido en mí,
-y aunque muy pronto caí en una forma de comunión eclesial y ordenanzas,
-aún me consideraba y se compadecía de mí y alentaba mi vida incluso ahí.
+y aunque muy pronto caí en una forma de comunión eclesial y de ordenanzas,
+seguía considerándome, compadeciéndose de mí, y alentado mi vida incluso ahí.
 
-Sin embargo, finalmente la forma externa nos sobrepasó,
+A pesar de eso, finalmente la forma externa nos sobrepasó,
 y la dulce y preciosa vida en nosotros comenzó a morir.
 Entonces el Señor descubrió otra manera de animarnos (a saber,
 mediante un sincero compartir de nuestras condiciones,
 de los tratos de Dios con nosotros y de Sus obras en nosotros),
-lo cual fue muy dulce y precioso al principio,
+la cual fue muy dulce y preciosa al principio,
 pero el enemigo también se entrometió allí. Fue cuando la mano del Señor cayó sobre mí,
-golpeando en mi misma raíz,
+golpeando mi propia raíz,
 quebrando mi vida en mil pedazos y pisoteando mi corona en el polvo.
-Entonces me convertí en un hombre de dolores (habiendo sido despojado de toda mi vida,
+Entonces me convertí en un hombre de dolores (tras haber sido despojado de toda mi vida,
 fe, esperanza, gozo y consuelo en un solo día), sin saber hacia dónde mirar o qué desear.
 A veces había anhelos, suspiros hacia Dios agitándose en mí,
 pero eran rápidamente cortados.
 A veces se me presentaba un sabor refrescante proveniente de alguna escritura,
 pero luego era repentinamente quitado y mi muerte y oscuridad acrecentadas.
-Entonces deseé: ¡Ojalá pudiera comparecer ante Su trono!
+Entonces deseaba: ¡Ojalá pudiera comparecer ante Su trono!
 Porque ciertamente mi consciencia estaba limpia delante
 de Él y no me había apartado impíamente de mi Dios,
-más bien fui quebrantado en pedazos por Su mano,
+más bien había sido quebrantado en pedazos por Su mano,
 aunque mi alma estaba buscándolo fervientemente.
 ¡Cómo se lamentó mi alma al ver cuán apto era yo
 para ser presa de cualquier espíritu voraz!
 Muchos me buscaron para devorarme, pero la mano del Señor estaba conmigo preservándome,
-aunque yo no lo sabía. Y aunque yo estaba completamente quebrantado y
+aunque yo no lo sabía. Y aunque yo estaba completamente quebrantado, y había sido
 abandonado por todo lo que yo había llamado o podía llamar conocimiento
 (porque entonces no podía llamarle a algo,
 bueno o malo), el Señor, mediante un instinto secreto,
 me preservó fuera de lo que era impío,
 y mantuvo mi corazón secretamente deseando la fuente y el manantial del bien.
 
-Finalmente fui cautivado por el mundo (debido a una desesperación que
-me hizo pensar que nunca más me encontraría con Dios) y traicionado por
-el amor a este (el cual por fin se levantó en mí y ganó terreno,
-al persuadirme de que mi presente estado y condición requerían el uso
-libre del mundo y el disfrute de todo lo que podía ofrecerme.) Sin embargo,
+Finalmente, debido a la desesperación que me hizo pensar
+que nunca más me encontraría con Dios,
+fui cautivado por el mundo y traicionado por
+el amor a este, el cual, por fin se había levantado en mí y ganado terreno,
+al persuadirme de que mi estado y condición presentes requerían el uso
+libre del mundo y el disfrute de todo lo que podía ofrecerme. Sin embargo,
 el Señor me siguió y fui visitado a menudo por una secreta aversión hacia el mundo,
-deseos de alejarme de él y ansias tras el manantial de mi vida.
+por deseos de alejarme de él y ansias tras el manantial de mi vida.
 Pero esos deseos en pos de Dios me aterrorizaban,
 por temor a la miseria y angustia indecibles a lo que ellos me habían conducido anteriormente.
 
 Durante este cortejo del mundo y alejamiento de la vida,
 la parte racional en mí se fortaleció (la que el Señor había largamente golpeado y humillado),
-y otra vez comencé a ser más y más sabio (al menos eso creía),
-capaz de juzgar las cosas de Dios y esperar y aguardar alguna gran aparición.
+y otra vez comencé a ser más y más sabio (al menos eso creía), y
+capaz de juzgar las cosas de Dios, y de esperar y aguardar alguna gran aparición.
 Pero el enemigo me engañó profundamente al complacerme con mi sentido
-de conocimiento y mantenerme alejado de la unidad con aquello que era
+de conocimiento y mantenerme alejado de la unidad con
 lo único capaz de darme una visión de Él cuando apareciera.
 Con esta sabiduría carnal juzgué y desprecié la verdadera vida en otros, como algo débil,
 bajo e incapaz de llevarlos hacia aquello que yo necesitaba y esperaba.
@@ -98,12 +99,12 @@ Sí, cuánto más consideraba y razonaba en mi mente, y más conversaba con ello
 footnote:[Él se refiere a la Sociedad de Amigos,
 que a manera de desprecio eran llamados cuáqueros.]
 más alejado me encontraba.
-Hasta que al fin el Señor me tocó poderosamente y levantó la vida en mí
-(la cual yo había matado por medio de todos estos razonamientos y discusiones),
+Hasta que finalmente, el Señor me tocó poderosamente y levantó la vida en mí
+(la que yo había matado por medio de todos los razonamientos y discusiones),
 y luego, gradualmente (esperando en esto), vi, sentí, probé y toqué a la Palabra viva.
 
-De esta manera mis ojos se han abierto y he visto las cadenas con las que había
-estado encadenado y alejado de la vida todos estos días. De hecho,
+De esta manera mis ojos han sido abierto, y he visto las cadenas con las que había
+estado encadenado y alejado de la vida todos esos días. De hecho,
 mis ojos han visto muchas de las calles y edificios de Babilonia.
 Sí, he oído la lengua del falso profeta que habla muy parecido al profeta verdadero,
 para que ninguna carne pueda discernir o distinguir entre ellos.
@@ -120,13 +121,13 @@ y salir de esa ciudad sucia y abominable que Dios está desolando.
 ¡Babilonia, en la que la vida pura, la fe que conquista, el amor sufrido,
 la esperanza purificadora,
 el desvestirse del cuerpo de pecado y vestirse de la vestidura viva no es,
-ni puede ser conocido!
-En Babilonia los hombres sólo están soñando en estas cosas y toda
-la satisfacción que tienen proviene del placer de su sueño,
+ni puede ser experimentado!
+En Babilonia los hombres sólo están soñando con estas cosas y toda
+la satisfacción que obtienen proviene del placer de su sueño,
 pero cuando se despierten encontrarán flaqueza, pobreza y desnudez sobre sus almas.
 
 [.old-style]
-=== Una Descripción de Babilonia / Por el Bien de las Hijas de Sión / Quienes Actualmente Habitan en Medio de Ella.
+=== Una Descripción de Babilonia / Por el Bien de las Hijas de Sión / Que Actualmente Habitan en Medio de Ella.
 
 BABILONIA es el sistema espiritual de la iniquidad,
 la mística gran ciudad del gran rey de las tinieblas.
@@ -136,7 +137,7 @@ y para que en lugar del verdadero y eterno Dios y Rey de Sión,
 el rey de las tinieblas sea adorado ahí.
 
 Allí es donde se sienta el hombre de pecado,
-en cualquier corazón o en cualquier sociedad de hombres donde encuentre
+en cualquier corazón, o en cualquier sociedad de hombres donde encuentre
 enmarcado un lugar de habitación. Allí se aloja,
 allí vive, allí se sienta como dios; allí reina, allí es adorado,
 allí es exaltado por encima de todo lo que puede ser llamado
@@ -152,13 +153,13 @@ muchas habitaciones en cada casa,
 y las casas y habitaciones pertenecen a sus varias familias y personas.
 Estas tienen sus leyes y gobiernos, su conocimiento de Dios y de Cristo, su orden,
 su adoración y su disciplina por la que caminan y por la que se
-ordenan a sí mismos bajo el rey de Babilonia en sus varios servicios,
+ordenan a sí mismas bajo el rey de Babilonia en sus varios servicios,
 lugares, oficios y empleos.
 
 2+++.+++ Babilonia es una ciudad espiritual o mística.
 No es un edificio externo de materiales terrenales,
 sino uno interno de materiales internos.
-Así como la Sión exterior y la Jerusalén exterior han caducado en su uso y su servicio,
+Así como la Sión exterior, la Jerusalén exterior, ha caducado en su uso y su servicio,
 así ha caducado también la Babilonia exterior.
 (Ustedes no necesitan mirar muy lejos para verlo).
 Así como Dios ha edificado una ciudad interna, un edificio espiritual,
@@ -170,16 +171,16 @@ una ciudad que se extendió sobre las naciones (¡según la fe del
 evangelio se propagaba en el mundo en días de los apóstoles!),
 así también se ha propagado Babilonia en el mundo.
 Es más, ella ha tomado todos los territorios y los dominios de Sión,
-la ha tirado al polvo y pisoteado.
+la ha tirado al polvo y la ha pisoteado.
 Babilonia ha engañado a las naciones al tener el vestido de Sión, la forma de Sión,
 la vestidura exterior de Sión, pero no el Espíritu de Sión.
 
 4+++.+++ Babilonia es una ciudad de iniquidad, de iniquidad escondida.
 Lo que está escondido en esta ciudad no es la vida,
-la justicia ni la santidad de los santos, sino la iniquidad,
+no es la justicia ni la santidad de los santos, sino la iniquidad,
 pecado y transgresión de la vida.
 Busquen en cualquiera de las calles de Babilonia, en cualquiera de las casas,
-en cualquiera de los cuartos, en cualquiera de las cámaras de oscuridad, allí hay pecado.
+en cualquiera de los cuartos, en cualquiera de las recámaras de oscuridad, allí hay pecado.
 Aunque ella es frecuentemente lavada y transformada en su apariencia externa,
 se mantiene contaminada en el interior.
 
@@ -189,10 +190,10 @@ despreciables a los ojos de la sabiduría del hombre, pero el tesoro,
 el elixir de la vida en ellas es precioso.
 Las vasijas de Babilonia hacen un gran espectáculo y parecen muy santas, muy celestiales,
 muy celosas de Dios y de Cristo,
-y en pro de establecer Su iglesia y Sus ordenanzas en todo el mundo.
+y del establecemiento de Su iglesia y ordenanzas en todo el mundo.
 Así se muestran en el exterior, pero son sepulcros con podredumbre en el interior.
 Bajo todo esto se aloja un corazón impuro y no santificado,
-un corazón insubordinado al espíritu y al poder del evangelio,
+un corazón insubordinado al espíritu y poder del evangelio,
 aunque haga un gran espectáculo de sujeción y de obediencia a la letra.
 
 5+++.+++ Babilonia es la ciudad del rey de las tinieblas, del gran rey de las tinieblas,
@@ -221,7 +222,7 @@ en el Espíritu, vida y poder.
 6+++.+++ Babilonia fue construida (y es diariamente construida) como imitación de Sión,
 pintada para verse como Sión. La intención de su edificación era reducir a Sión,
 suprimir a Sión,
-separarse de la verdad por medio de una imagen falsa y mantener a sus habitantes en
+separarse de la verdad por medio de una imagen falsa, y mantener a sus habitantes en
 paz y satisfacción bajo la creencia y la esperanza de que es la verdadera Sión.
 
 7+++.+++ El fin de todo esto (que Satanás edificara esta ciudad, esta gran ciudad) era y es,
@@ -250,23 +251,23 @@ Hay fornicación (o adulterio para con la vida) en las formas más
 finas y más puras de adoración que el hombre pueda inventar o imitar.
 Los que establecen la iglesia de la ramera no la llaman así,
 tal vez ni piensan que lo sea.
-Los que establecen el ministerio de la ramera o sus ordenanzas, no les dan ese nombre,
+Los que establecen el ministerio de la ramera y sus ordenanzas, no les dan ese nombre,
 los llaman ministerio y ordenanzas de Cristo.
 Sin embargo, esto es tan ciertamente fornicación para con la vida,
 como los caminos más repugnantes de la adoración pagana.
 
 Si un hombre lee las Escrituras y se lanza a la práctica
 de lo que encuentra mencionado allí,
-sin que se levante lo viviente en él, lo hace por consejo de la ramera.
+sin que se levante lo Vivo en él, lo hace por consejo de la ramera.
 Está cometiendo fornicación y descarriándose de la vida.
 Porque la verdadera adoración radica en el Espíritu y en la Verdad,
-es el nuevo nacimiento que Dios busca que lo adore,
+y es el nuevo nacimiento que Dios busca que lo adore,
 pero el espíritu del hombre se lanza hacia esas prácticas que el Señor aborrece y rechaza.
 Dicho espíritu nunca podrá ser limpiado de esta manera,
 ni ser preparado para entrar en la cama de Cristo,
 lo único que obtendrá es una capa de pintura de las Escrituras
 y meterse en la cama y en el seno pintado de la ramera,
-en donde permanecerá sin ser renovado, cambiado o llevado a la muerte,
+en donde permanecerá sin ser renovado, sin ser cambiado, sin ser llevado a la muerte,
 aun cuando profese grandes cosas espirituales.
 
 Así entonces, las Escrituras,
@@ -276,22 +277,23 @@ son usadas por la ramera para alejarnos de la vida.
 Es por eso que ahora muchas personas proclaman que su propio camino y su propia adoración,
 son el camino y la adoración que están de acuerdo a las Escrituras.
 Sin embargo, la religión de la ramera, su adoración,
-su profesión y sus prácticas no alcanzan a purificar sus consciencias,
-sólo a pintar el viejo sepulcro donde se aloja la putrefacción, y por tanto,
+su profesión y sus prácticas no alcanzan a purificar las consciencias,
+sólo a pintar el viejo sepulcro donde se aloja la putrefacción, y por lo tanto,
 el corazón nunca fue completamente circuncidado o bautizado,
 ni el viejo hombre quitado y el nuevo colocado.
 La sangre de la purificación (la que verdaderamente limpia de pecado)
 nunca fue sentida en dichas personas en su virtud y poder,
 sino sólo como una percepción,
 diciendo que han sido limpiadas en Cristo a partir de un concepto que han robado de
-las Escrituras y no de la experiencia real de la cosa misma en vida y poder en sus conciencias.
+las Escrituras y no a partir de la experiencia real
+de la cosa misma en vida y poder en sus conciencias.
 De manera que la naturaleza impía todavía permanece,
 el corazón impío de incredulidad todavía se encuentra en ellos, y carecen de la vida,
 poder, Espíritu, amor, humildad, mansedumbre, paciencia,
-inocencia y sencillez del cordero y de la paloma.
+inocencia y sencillez del Cordero y de la Paloma.
 
 Ahora bien, hay varios pecados por los que el Espíritu del Señor ha culpado a Babilonia,
-y por los que ajustará cuentas con ella y con todos los que toman parte de ella.
+y por los que ajustará cuentas con ella y con todos los que participan de ella.
 Algunos de los cuales mencionaré:
 
 1+++.+++ __Sus profundas fornicaciones para con la vida
@@ -339,7 +341,7 @@ Así, pues, pensando que están en lo correcto,
 han contraído un espíritu altivo sosteniendo sus conceptos como el único camino.
 Ellos han crecido alto, han crecido sabios,
 se han hecho más confiados y piensan que ya conocen el camino
-y lo pueden mantener mediante argumentos innegables.
+y que lo pueden mantener mediante argumentos innegables.
 Por lo tanto, el Señor con Sus enseñanzas permanece a gran distancia de ellos.
 
 4+++.+++ __Continuar en prácticas en las que una vez fueron dirigidos por el Espíritu,
@@ -358,7 +360,7 @@ Llamar a estos los caminos de Dios o los verdaderos caminos de la vida, es una b
 "`Yo conozco la blasfemia de los que dicen ser judíos, y no lo son,
 sino sinagoga de Satanás`" (Apoc.
 2:9). Había, incluso en los días de los apóstoles,
-personas que pretendían ser cristianos y fingían ser todavía de la iglesia,
+personas que pretendían ser cristianos y que fingían ser todavía de la iglesia,
 aunque habían perdido la vida.
 El Espíritu del Señor dijo que esto era blasfemia.
 
@@ -375,14 +377,14 @@ preservados poderosamente por la unción. Pero,
 la unción y pensaban que la revelación había cesado?
 
 Idolatría es adorar a Dios sin Su Espíritu (esta es la pura y desnuda verdad del asunto).
-Idolatría es inventar cosas desde la mente carnal o imitar cosas que otros
+Idolatría es inventar cosas desde la mente carnal, o imitar cosas que otros
 que tenían el Espíritu hicieron en el Espíritu por mandato del Espíritu.
 Una iglesia,
 ministerio o adoración inventada o imitada sin la vida y
-sin el Espíritu es obra de las manos de los hombres,
+sin el Espíritu, es obra de las manos de los hombres,
 es un ídolo; todo lo que es realizado ahí es idolatría. (Apoc.
 9:20) Esta es una religión sin vida, una adoración sin vida.
-Porque el Dios viviente, el Señor Dios de vida y poder sin fin,
+Porque el Dios vivo, el Señor Dios de vida y poder sin fin,
 sólo es adorado por Su Espíritu y en la verdad de esa vida
 que Él engendra en el corazón. Cualquier otra adoración,
 sin importar cuán espiritual parezca, es idólatra.
@@ -407,7 +409,7 @@ Quiten su fe falsa (la que no puede vencer la naturaleza ni el espíritu mundano
 Quiten su esperanza falsa (la que no puede purificar sus corazones).
 Quiten su humildad fingida y ayunos de voluntad propia (los cuales
 no pueden derribar la naturaleza soberbia y exaltada en ustedes).
-Quiten su amor falso (con el cual no pueden amar a sus hermanos en la verdad).
+Quiten su amor falso (con el que no pueden amar a sus hermanos en la verdad).
 Quiten su celo, mansedumbre,
 santidad falsa... todo lo cual brota y crece de la semilla incorrecta.
 Quiten todas sus oraciones, lecturas, predicaciones,
