fix inconsistent short headings

--- a/escritos-volumen-1/updated/04-capitulo-3.adoc
+++ b/escritos-volumen-1/updated/04-capitulo-3.adoc
@@ -1,4 +1,4 @@
-[short="Algunos Principios que Guían Hacia Afuera de la Apostasía"]
+[short="Capítulo III -- Algunos Principios que Guían Hacia Afuera de la Apostasía"]
 == Capítulo III. Algunos Principios que Sacan de la Apostasía e Introducen en el Verdadero Espíritu y Vida Cristiana
 
 [.numbered-group]
