--- a/escritos-volumen-1/updated/10-capitulo-9.adoc
+++ b/escritos-volumen-1/updated/10-capitulo-9.adoc
@@ -1,4 +1,4 @@
-[short="El Nuevo Pacto del Evangelio"]
+[short="Capítulo IX -- El Nuevo Pacto del Evangelio"]
 == Capítulo IX. La Diferencia entre el Nuevo Pacto del Evangelio y el Antiguo Pacto de la Ley
 
 === Prefacio
