--- a/escritos-volumen-1/updated/03-capitulo-2.adoc
+++ b/escritos-volumen-1/updated/03-capitulo-2.adoc
@@ -1,4 +1,4 @@
-[short="El Camino de la Vida y de la Muerte"]
+[short="Capítulo II -- El Camino de la Vida y de la Muerte"]
 == Capítulo II. El Camino de la Vida y de la Muerte Hecho Manifiesto y Puesto Delante de los Hombres
 
 === Prefacio
