--- a/escritos-volumen-1/updated/09-capitulo-8.adoc
+++ b/escritos-volumen-1/updated/09-capitulo-8.adoc
@@ -1,4 +1,4 @@
-[short="La Autoridad y Gobierno que Cristo Excluyó"]
+[short="Capítulo VIII -- La Autoridad y Gobierno que Cristo Excluyó"]
 == Capítulo VIII. La Autoridad y Gobierno que Cristo Excluyó de Su Iglesia
 
 [quote.scripture, , Mateo 20:25-28]
