errors found proofing Sewel's quotes of IP

--- a/escritos-volumen-1/updated/02-capitulo-1.adoc
+++ b/escritos-volumen-1/updated/02-capitulo-1.adoc
@@ -216,17 +216,17 @@ Ellos habían sido acercados al Monte Sión, a la Jerusalén celestial, etc.,
 mientras que nosotros apenas teníamos un conocimiento
 literal o una percepción de lo que eran esas cosas.
 Entonces vi que el curso total de la religión entre
-nosotros era, en su mayor parte, sólo una charla,
+nosotros era, en su mayor parte, sólo palabras,
 en comparación con lo que ellos habían sentido, disfrutado, poseído y vivido.
 
-"`Esta consciencia me enfermó el corazón y me llevó a un profundo clamor a Dios,
-a concluir la búsqueda en las Escrituras y a esperar en Dios,
+"`Esta consciencia me enfermó el corazón y me hizo clamar profundamente a Dios,
+escudriñar cuidadosamente las Escrituras y esperar en Dios,
 todo con el fin de poder recibir el sentido y el entendimiento puro de ellas, de la luz,
 en la luz y por medio de la ayuda de Su Espíritu.
 Lo que el Señor depositó en mí en ese estado, lo recuerdo
 delante de Él con agradecimiento hasta este día,
 porque era mi Dios, compasivo y vigilante,
-aunque todavía no me había dirigido en cómo fijar mi mente
+aunque todavía no me había enseñado en cómo fijar mi mente
 en Él. Luego fui conducido (de verdad fui conducido,
 no corrí por mí mismo) a separarme de la adoración del mundo y a reunirme con una sociedad;^
 footnote:[Quiere decir que él dejó las formas tradicionales de adoración
@@ -261,13 +261,14 @@ como si quedaran muy cortos de aquella sabiduría, luz,
 vida y poder que yo anhelaba y buscaba.
 En algún momento después de eso,
 tuve la oportunidad de reunirme con algunos de ellos, y unos pocos fueron
-movidos por el Señor (sé que es así desde entonces) a venir a verme.
+movidos por el Señor (ahora entiendo que fue así) a venir a verme.
 Recuerdo claramente como ellos alcanzaron la vida de Dios en mí desde el puro principio,
 la cual respondió a sus voces y provocó que brotara en mí un gran amor por ellos.
 Aún así,
 en mis razonamientos con ellos y en las disputas en mi mente con respecto a ellos,
-yo estaba muy lejos de aceptar que estuvieran conociendo verdaderamente al Señor,
-o que Él apareciera en Su vida y poder como mi estado requería y como mi alma esperaba.
+yo estaba muy lejos de aceptar que ellos conocieran verdaderamente al Señor,
+o que aparecieran/vinieran en esa vida y poder que mi condición necesitaba,
+y mi alma esperaba.
 De hecho, cuánto más conversaba con ellos, más me parecía en mi entendimiento y razón,
 que yo los superaba y los aplastaba bajo mis pies como una generación pobre, débil,
 tonta y despreciable.
@@ -282,18 +283,20 @@ Sin embargo, yo sentía que cada día mi entendimiento los superaba más, y en c
 cada día los menospreciaba más.
 
 "`Después de mucho tiempo me invitaron a escuchar
-a uno de ellos hablar (y como a menudo había sucedido,
-me compadecieron con tierno amor y sintieron mi carencia de lo que ellos poseían).
-Yo fui con temor y temblor y con deseos del Altísimo
+a uno de ellos hablar, como me habían invitado a menudo,
+pues ellos, con tierno amor, seguían compadeciéndome,
+y sentían mi carencia de lo que ellos poseían.
+Hubo una respuesta en mi corazón,
+y yo fui con temor y temblor y con deseos del Altísimo
 (Quien está sobre todo y todo lo sabe),
 de no recibir nada como verdad que no fuera de Él,
-de no resistirme a algo que fuera de Él y de inclinarme delante
+ni resistir nada que fuera de Él, sino de inclinarme delante
 de la aparición del Señor mi Dios y ante ninguna otra.
 Y en efecto, cuando llegué sentí la presencia y el poder del Altísimo entre ellos,
 sentí que palabras de verdad provenientes
 del Espíritu de verdad llegaron a mi corazón y a
 mi consciencia, y pusieron al descubierto mi estado ante la presencia del Señor.
-Sí, y no sólo sentí palabras y demostraciones afuera,
+Sí, y no sólo sentí palabras y demostraciones desde afuera,
 sino también que lo que estaba muerto cobraba vida
 y que la Semilla se levantaba de manera tal,
 que mi corazón (en la certeza de la luz y en la claridad de su verdadero sentido) dijo:
@@ -344,22 +347,22 @@ vencido y cambiado mi corazón delante de Él. He encontrado la fe de la Semilla
 la que ha hecho y hace lo que la fe del hombre jamás podrá hacer.
 He encontrado el verdadero nacimiento,
 el nacimiento que es heredero del reino y hereda el reino.
-He encontrado el verdadero espíritu de oración y súplica,
-en el que el Señor prevalece y extrae de Él lo que la condición necesita;
+He encontrado el verdadero espíritu de oración y súplica
+que triunfa en el Señor, y extrae de Él lo que la condición necesita;
 en el que el alma Lo busca siempre en la voluntad,
 tiempo y forma que son aceptables para Él. ¿Qué más diré? He encontrado la verdadera paz,
 la verdadera justicia, la verdadera santidad, el verdadero reposo del alma,
 la morada eterna en la que el redimido habita.
 Sé que todo esto es verdadero en Aquel que es verdadero, y que no soy capaz de dudar,
-disputar o razonar en mi mente acerca de esto.
-Ahí permanece,
+disputar o razonar en mi mente acerca de esto
+según premanezca ahí,
 donde se ha recibido la plena seguridad y satisfacción.
 También sé muy bien y con claridad de espíritu,
 dónde están las dudas y las disputas y dónde están la certeza y la plenitud,
 y que en la tierna misericordia del Señor he sido
-preservado de unas e introducido en las otras.
+preservado fuera de lo uno, y dentro de lo otro.
 
-"`El Señor sabe que en estas cosas no me pronuncio de manera jactanciosa,
+"`El Señor sabe que no digo estas cosas de manera jactanciosa,
 que preferiría estar hablando de mi nadedad, mi vacío,
 mi debilidad y mis múltiples enfermedades, las cuales siento más que nunca.
 El Señor ha quebrantado la parte del hombre en mí; soy un gusano,
@@ -368,7 +371,7 @@ o útil para Él. No puedo vigilarme o preservarme a mí mismo;
 no.
 Diariamente siento que no puedo mantener viva mi propia
 alma, y que soy más débil delante de los hombres;
-sí, más débil en mi espíritu y en mí mismo como nunca lo he sido.
+sí, más débil en mi propio espíritu, es decir, en mí mismo, como nunca lo he sido.
 Sin embargo, no puedo sino pronunciar alabanza a mi Dios,
 porque siento Su brazo extendido hacia mí, y que la
 debilidad que siento en mí no es pérdida,
