--- a/escritos-volumen-1/updated/02-capitulo-1.adoc
+++ b/escritos-volumen-1/updated/02-capitulo-1.adoc
@@ -267,7 +267,7 @@ la cual respondió a sus voces y provocó que brotara en mí un gran amor por el
 Aún así,
 en mis razonamientos con ellos y en las disputas en mi mente con respecto a ellos,
 yo estaba muy lejos de aceptar que ellos conocieran verdaderamente al Señor,
-o que aparecieran/vinieran en esa vida y poder que mi condición necesitaba,
+o que vinieran en esa vida y poder que mi condición necesitaba,
 y mi alma esperaba.
 De hecho, cuánto más conversaba con ellos, más me parecía en mi entendimiento y razón,
 que yo los superaba y los aplastaba bajo mis pies como una generación pobre, débil,
