--- a/escritos-volumen-1/updated/05-capitulo-4.adoc
+++ b/escritos-volumen-1/updated/05-capitulo-4.adoc
@@ -958,7 +958,7 @@ los enseñó a gemir les enseñara también a hablar?
 ¿Han sido alguna vez capaces de distinguir los suspiros
 y gemidos que engendra el Espíritu,
 de los suspiros y gemidos de la parte naturale y emotiva en ustedes?
-¿Han sido empujada a un lado esa parte naturale, con todos sus suspiros, gemidos,
+¿Han sido empujada a un lado esa parte natural, con todos sus suspiros, gemidos,
 deseos y esfuerzos?
 ¿Ha sido levantada la Semilla inmortal por el Espíritu de vida eterna,
 la cual enseña a llorar y afligirse, y finalmente a hablar,
