IP (otra de Miried)

--- a/escritos-volumen-1/updated/06-capitulo-5.adoc
+++ b/escritos-volumen-1/updated/06-capitulo-5.adoc
@@ -759,7 +759,7 @@ Pregunta: ¿Cómo me salvará esto?
 
 [.discourse-part]
 Respuesta: Por este medio:
-Eso que to destruye y te separa del Dios vivo será arrancado diariamente,
+Eso que te destruye y te separa del Dios vivo será arrancado diariamente,
 y el corazón será cambiado día a día a la imagen del que es la luz.
 Tú serás llevado a la unidad y a la comunión con
 la luz, poseyéndola y siendo poseído por ella.
