--- a/escritos-volumen-2/updated/01-capitulo-1.adoc
+++ b/escritos-volumen-2/updated/01-capitulo-1.adoc
@@ -66,7 +66,7 @@ Que quite el velo de todos los corazones que sinceramente desean la verdad,
 y abra el verdadero ojo en ellos para que puedan ver al Deseado
 y Amado de sus almas y sean conducidos por Él en el verdadero viaje,
 fuera del yo y hacia el reino.
-¡Oh, qué puedan a la tierra de los vivos,
+¡Oh, qué puedan llegar a la tierra de los vivos,
 donde la comida de vida es ingerida y donde los manantiales vivos fluyen!
 Allí están los viñedos que no plantamos, las moradas que no edificamos,
 y donde el fruto de la plantación de Dios (el vino del reino) es bebido; es decir,
